--- a/.github/workflows/main_abc-cars-ui.yml
+++ b/.github/workflows/main_abc-cars-ui.yml
@@ -24,9 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
+          npm run build --prod
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -53,4 +51,4 @@ jobs:
           app-name: 'abc-cars-ui'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_280A139A968D4424B26D49F7C63FD60B }}
-          package: .
+          package: ./dist/abc-cars
