--- a/.github/workflows/main_abc-cars-ui.yml
+++ b/.github/workflows/main_abc-cars-ui.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,19 +30,6 @@ jobs:
         with:
           name: node-app
           path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
